syntax = "proto3";

package emissary.grpc.sample;

import "google/protobuf/empty.proto";
option java_multiple_files = true;

message DataReverseRequest {
  bytes query = 1;
}

message DataReverseResponse {
  bytes result = 1;
}

message DataReverseHealthStatus {
  bool ok = 1;
}

service DataReverseService {
  rpc DataReverse(DataReverseRequest) returns (DataReverseResponse);
  rpc CheckHealth(google.protobuf.Empty) returns (DataReverseHealthStatus);
}
